--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="systems.html">Systems</a>
-    <a href="architecture.html">Architecture</a>
+    <a href="Architecture.html">Architecture</a>
     <a href="ux.html">UX Design</a>
     <a href="security.html">Security</a>
     <a href="sources.html">Sources</a>
